fix(core/pipelines): break and wrap long comments text (#8748)

--- a/app/scripts/modules/core/src/pipeline/details/stageExecutionDetails.less
+++ b/app/scripts/modules/core/src/pipeline/details/stageExecutionDetails.less
@@ -78,6 +78,10 @@
         margin-right: 10px;
       }
     }
+    .execution-details-comments {
+      word-break: break-all;
+      margin-right: 10px;
+    }
 
     tbody {
       tr.stage-summary {
